# tele-stats

./: Cargo.toml  README.md
src/: commands.rs  logs.rs  main.rs
src/configs/: github_cfg.yml  gitlab_cfg.yml  global_cfg.yml
src/github/: analyzer.rs  client.rs  formatter.rs  mod.rs  types.rs
src/gitlab/: analyzer.rs  client.rs  formatter.rs  mod.rs  types.rs
