[package]
name = "tele-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
chrono = "0.4"
thiserror = "1.0"
urlencoding = "2.1"
base64 = "0.22"